--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
   <section class="hero">
     <h1>Vexinq ile Sunucunuzu Güçlendirin</h1>
-    <p>Gelişmiş özellikleriyle sunucunuzu yönetin, eğlenin ve daha fazlasını keşfedin.</p>
+    <p>Hergün Yenilenen Özelliklerle Sunucunuzu Güçlendirin Hergün Yenilenen Komutlarla Sunucunuz Mükemmel Olacak!.</p>
     <a class="cta" href="https://discord.com/oauth2/authorize?client_id=1387098050316472341&permissions=8&integration_type=0&scope=bot" target="_blank">Botu Davet Et</a>
   </section>
 
   <section id="about" class="section">
     <h2>Hakkımızda</h2>
-    <p>Vexinq, gelişmiş komut altyapısı, kullanıcı dostu arayüzü ve özelleştirilebilir sistemleri ile Discord toplulukları için geliştirilmiş güçlü bir bottur.</p>
+    <p>Vexinq, 2023 Tarihinden Beri Yenilenmekte Olan Hergün En Gelişmiş En İşlevli Komutlara Sahip Bir Bottur. En Gelişmiş Filtreli Kodlar Butonlu Kodlar Sizlerle</p>
   </section>
 
   <section id="features" class="section">
@@ -43,7 +43,7 @@
 
   <section id="contact" class="section">
     <h2>İletişim</h2>
-    <p>Bize ulaşmak için <a href="mailto:vexinqbotdestek@gmail.com">vexinqbotdestek@gmail.com</a> adresine mail atabilirsiniz.</p>
+    <p>Bize ulaşmak için <a href="YAKINDA...">YAKINDA..</a> adresine mail atabilirsiniz.</p>
   </section>
 
   <footer>
