--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
 
   <section id="about" class="section">
     <h2>Hakkımızda</h2>
-    <p>Vexinq, 2023 Tarihinden Beri Yenilenmekte Olan Hergün En Gelişmiş En İşlevli Komutlara Sahip Bir Bottur. En Gelişmiş Filtreli Kodlar Butonlu Kodlar Sizlerle</p>
+    <p>Vexinq, 2023 yılında Discord topluluklarının ihtiyaçlarını karşılamak ve sınırları zorlayan bir deneyim sunmak amacıyla geliştirildi. Sadece bir bot değil; stabilite, hız ve teknolojiyle bütünleşmiş bir sistem sunuyoruz.
+
+Günümüzde birçok bot sadece komut sunarken, Vexinq; kullanıcı etkileşimini ön planda tutan butonlu arayüzler, dinamik filtre sistemleri, ve otomatik yapılandırmalar ile sunucuların dijital omurgası haline gelmeyi hedefliyor.
+
+Vexinq’in temel vizyonu:
+
+Kararlı ve optimize edilmiş altyapı
+
+Kolay kullanılabilir ama derinlikli sistemler
+
+Kullanıcı dostu arayüzler ve etkileşimli kontroller
+
+Geliştirici odaklı modülerlik ve sürdürülebilirlik
+
+Kendimizi sadece komutlar üzerinden değil; sağladığımız deneyim, hız ve entegrasyon kabiliyetleriyle anlatıyoruz. Sürekli güncellenen sistemimiz sayesinde, her geçen gün daha akıllı, daha hızlı ve daha etkili hale geliyoruz.
+
+Vexinq ile sıradan değil, sistematik olun.</p>
   </section>
 
   <section id="features" class="section">
