--- a/index.html
+++ b/index.html
@@ -49,11 +49,54 @@ Vexinq ile sıradan değil, sistematik olun.</p>
   <section id="features" class="section">
     <h2>Özellikler</h2>
     <ul>
-      <li>Moderasyon Komutları</li>
-      <li>Müzik Sistemi</li>
-      <li>Seviye & XP Sistemi</li>
-      <li>Otomatik Rol</li>
-      <li>Destek Bileti Sistemi</li>
+      <li>🚀 Özellikler – Vexinq Ne Sunar?
+Vexinq, bir Discord botundan beklenebilecek tüm sistemleri en gelişmiş haliyle tek bir çatı altında toplar. Hem kullanıcı dostu hem de yönetici odaklı modülleriyle, sunucunuzu baştan sona profesyonelce yönetmenizi sağlar.
+
+🏗️ Otomatik Sunucu Kurulum Sistemi
+Sıfırdan bir sunucu mu kuruyorsunuz? Vexinq ile tek tıkla;
+
+Hazır kanal ve rol şablonları
+
+Otomatik kategori yerleşimi
+
+Temaya özel sistem kurulumu
+Kurulumunuzu saniyeler içinde tamamlayın.
+
+🔨 Gelişmiş Moderasyon Sistemi
+Sunucunuzu kontrol altında tutmak için gereken her şey:
+
+Butonlu Ban, Mute, Kick ve Uyarı sistemleri
+
+Geçici cezalar (süreli mute/ban)
+
+Detaylı ceza geçmişi, log sistemi ve oto-uyarı mekanizması
+
+Yetki aşımına karşı akıllı yönetici denetimi
+
+🛡️ Güçlü Koruma Altyapısı
+Sunucunuzu her türlü zararlı kullanıcıya karşı koruyun:
+
+Anti-raid (bot koruması, spam engeli)
+
+Anti-link, anti-@everyone, capslock ve emoji spam filtresi
+
+Rol ve kanal koruması: Silinen veya düzenlenen verileri otomatik geri yükleme
+
+Gelişmiş whitelist ve güven seviyesi sistemi
+
+🧰 Daha Fazlası:
+Kayıt Sistemi: Cinsiyetli, butonlu, oto-rol destekli
+
+Davet Takibi ve Yetkili Takip sistemleri
+
+Stat paneli, aktiflik takibi ve XP sistemi
+
+Eğlence, bilgi ve yardımcı komutlar ile destekleyici modüller
+
+Filtreli yardım menüsü ve kategorili komutlar
+
+Vexinq, sadece bir bot değil, bir sistemdir.
+Sunucunuzun ihtiyaç duyduğu her şey burada. Ve bu, sadece başlangıç.</li>
     </ul>
   </section>
 
