--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ Vexinq ile sıradan değil, sistematik olun.</p>
     <h2>Özellikler</h2>
     <ul>
       <li>🚀 Özellikler – Vexinq Ne Sunar?
-Vexinq, bir Discord botundan beklenebilecek tüm sistemleri en gelişmiş haliyle tek bir çatı altında toplar. Hem kullanıcı dostu hem de yönetici odaklı modülleriyle, sunucunuzu baştan sona profesyonelce yönetmenizi sağlar.
+Vexinq, bir Discord botundan beklenebilecek tüm sistemleri en gelişmiş haliyle tek bir çatı altında toplar. Hem kullanıcı dostu hem de yönetici odaklı modülleriyle, sunucunuzu baştan sona profesyonelce yönetmenizi sağlar.</li>
 
-🏗️ Otomatik Sunucu Kurulum Sistemi
+</li>🏗️ Otomatik Sunucu Kurulum Sistemi
 Sıfırdan bir sunucu mu kuruyorsunuz? Vexinq ile tek tıkla;
 
 Hazır kanal ve rol şablonları
@@ -60,9 +60,9 @@ Hazır kanal ve rol şablonları
 Otomatik kategori yerleşimi
 
 Temaya özel sistem kurulumu
-Kurulumunuzu saniyeler içinde tamamlayın.
+Kurulumunuzu saniyeler içinde tamamlayın.</li>
 
-🔨 Gelişmiş Moderasyon Sistemi
+</li>🔨 Gelişmiş Moderasyon Sistemi
 Sunucunuzu kontrol altında tutmak için gereken her şey:
 
 Butonlu Ban, Mute, Kick ve Uyarı sistemleri
@@ -71,9 +71,9 @@ Geçici cezalar (süreli mute/ban)
 
 Detaylı ceza geçmişi, log sistemi ve oto-uyarı mekanizması
 
-Yetki aşımına karşı akıllı yönetici denetimi
+Yetki aşımına karşı akıllı yönetici denetimi</li>
 
-🛡️ Güçlü Koruma Altyapısı
+</li>🛡️ Güçlü Koruma Altyapısı
 Sunucunuzu her türlü zararlı kullanıcıya karşı koruyun:
 
 Anti-raid (bot koruması, spam engeli)
@@ -82,9 +82,9 @@ Anti-link, anti-@everyone, capslock ve emoji spam filtresi
 
 Rol ve kanal koruması: Silinen veya düzenlenen verileri otomatik geri yükleme
 
-Gelişmiş whitelist ve güven seviyesi sistemi
+Gelişmiş whitelist ve güven seviyesi sistemi</li>
 
-🧰 Daha Fazlası:
+</li>🧰 Daha Fazlası:
 Kayıt Sistemi: Cinsiyetli, butonlu, oto-rol destekli
 
 Davet Takibi ve Yetkili Takip sistemleri
@@ -93,7 +93,7 @@ Stat paneli, aktiflik takibi ve XP sistemi
 
 Eğlence, bilgi ve yardımcı komutlar ile destekleyici modüller
 
-Filtreli yardım menüsü ve kategorili komutlar
+Filtreli yardım menüsü ve kategorili komutlar</li>
 
 Vexinq, sadece bir bot değil, bir sistemdir.
 Sunucunuzun ihtiyaç duyduğu her şey burada. Ve bu, sadece başlangıç.</li>
