--- a/index.html
+++ b/index.html
@@ -97,6 +97,66 @@ Filtreli yardım menüsü ve kategorili komutlar</li>
 
 Vexinq, sadece bir bot değil, bir sistemdir.
 Sunucunuzun ihtiyaç duyduğu her şey burada. Ve bu, sadece başlangıç.</li>
+
+<html lang="tr">
+<head>
+  <meta charset="UTF-8">
+  <title>Destek Sunucumuz</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fef7f0;
+      text-align: center;
+      padding-top: 100px;
+    }
+
+    .container {
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      display: inline-block;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      color: #d35400;
+    }
+
+    p {
+      font-size: 18px;
+      color: #666;
+      margin-bottom: 30px;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 12px 25px;
+      margin: 10px;
+      font-size: 16px;
+      border-radius: 6px;
+      background-color: orange;
+      color: white;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+    }
+
+    .btn:hover {
+      background-color: red;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <h1>📢 Destek Sunucumuz</h1>
+    <p>7/24 ulaşabileceğiniz öneri veya sorunlar için bize gelebilirsiniz!</p>
+    <a class="btn" href="https://discord.gg/e6aJDqZyxM" target="_blank">Vexinq</a>
+    <a class="btn" href="https://discord.gg/Dqw9rYTa" target="_blank">ZenixCore</a>
+  </div>
+
+</body>
+</html>
+      
     </ul>
   </section>
 
