--- a/index.html
+++ b/index.html
@@ -106,33 +106,39 @@ Sunucunuzun ihtiyaç duyduğu her şey burada. Ve bu, sadece başlangıç.</li>
     body {
       font-family: Arial, sans-serif;
       background-color: #fef7f0;
-      text-align: center;
-      padding-top: 100px;
+      margin: 0;
+      padding: 0;
     }
 
-    .container {
+    .support-box {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
       background-color: white;
-      padding: 30px;
+      padding: 20px;
       border-radius: 10px;
-      display: inline-block;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      box-shadow: 0 0 15px rgba(0,0,0,0.15);
+      text-align: center;
+      z-index: 1000;
     }
 
-    h1 {
+    .support-box h1 {
+      font-size: 18px;
+      margin-bottom: 10px;
       color: #d35400;
     }
 
-    p {
-      font-size: 18px;
+    .support-box p {
+      font-size: 14px;
       color: #666;
-      margin-bottom: 30px;
+      margin-bottom: 15px;
     }
 
     .btn {
       display: inline-block;
-      padding: 12px 25px;
-      margin: 10px;
-      font-size: 16px;
+      padding: 10px 20px;
+      margin: 5px;
+      font-size: 14px;
       border-radius: 6px;
       background-color: orange;
       color: white;
@@ -147,11 +153,11 @@ Sunucunuzun ihtiyaç duyduğu her şey burada. Ve bu, sadece başlangıç.</li>
 </head>
 <body>
 
-  <div class="container">
+  <div class="support-box">
     <h1>📢 Destek Sunucumuz</h1>
     <p>7/24 ulaşabileceğiniz öneri veya sorunlar için bize gelebilirsiniz!</p>
-    <a class="btn" href="https://discord.gg/e6aJDqZyxM" target="_blank">Vexinq</a>
-    <a class="btn" href="https://discord.gg/Dqw9rYTa" target="_blank">ZenixCore</a>
+    <a class="btn" href="https://discord.gg/qvZBKEUCQy" target="_blank">Vexinq</a>
+    <a class="btn" href="https://discord.gg/MKq4UsRNMS" target="_blank">ZenixCore</a>
   </div>
 
 </body>
