--- a/index.html
+++ b/index.html
@@ -186,13 +186,14 @@
   <header>
     <div class="logo">Vexinq</div>
     <nav>
-      <ul>
-        <li><a href="#about">Hakkımızda</a></li>
-        <li><a href="#features">Özellikler</a></li>
-        <li><a href="#contact">İletişim</a></li>
-        <li><a class="invite-btn" href="https://discord.com/oauth2/authorize?client_id=1387098050316472341&permissions=8&scope=bot" target="_blank">Davet Et</a></li>
-      </ul>
-    </nav>
+  <ul>
+    <li><a href="#about"><span class="nav-dot"></span> Hakkımızda</a></li>
+    <li><a href="#features"><span class="nav-dot"></span> Özellikler</a></li>
+    <li><a href="#contact"><span class="nav-dot"></span> İletişim</a></li>
+    <li><a class="invite-btn" href="https://discord.com/oauth2/authorize?client_id=1387098050316472341&permissions=8&scope=bot" target="_blank">Davet Et</a></li>
+  </ul>
+</nav>
+
   </header>
 
   <section class="hero">
