--- a/index.html
+++ b/index.html
@@ -2,237 +2,112 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vexinq Discord Botu</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vexarithul</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --main-color: #00aaff;
+      --bg-gradient: linear-gradient(135deg, #00111a, #000c1a);
+    }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4faff;
-      color: #333;
-      scroll-behavior: smooth;
+      font-family: 'Orbitron', sans-serif;
+      background: var(--bg-gradient);
+      color: #fff;
+      overflow-x: hidden;
     }
-
     header {
-      background-color: #007BFF;
-      padding: 20px 40px;
+      text-align: center;
+      padding: 60px 20px 30px;
+    }
+    header h1 {
+      font-size: 4rem;
+      color: var(--main-color);
+      text-shadow: 0 0 20px var(--main-color), 0 0 40px var(--main-color);
+    }
+    nav {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      color: white;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      margin-top: 20px;
     }
-
-    .logo {
-      font-size: 24px;
-      font-weight: 600;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      margin: 0;
-      padding: 0;
-    }
-
     nav a {
       text-decoration: none;
-      color: white;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #b3d1ff;
-    }
-
-    .invite-btn {
-      background-color: white;
-      color: #007BFF !important;
-      padding: 8px 16px;
-      border-radius: 6px;
-      font-weight: 600;
-      transition: 0.3s;
-    }
-
-    .invite-btn:hover {
-      background-color: #0056b3;
-      color: white !important;
-    }
-
-    .hero {
-      background: linear-gradient(to right, #007BFF, #0D6EFD);
-      color: white;
-      text-align: center;
-      padding: 80px 20px;
-      animation: fadeIn 2s ease;
-    }
-
-    .hero h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 30px;
-    }
-
-    .cta {
-      display: inline-block;
-      padding: 12px 24px;
-      background-color: white;
-      color: #007BFF;
-      border-radius: 6px;
+      color: #66ccff;
       font-weight: bold;
-      text-decoration: none;
+      padding: 10px 15px;
+      border-radius: 8px;
+      background: rgba(0, 170, 255, 0.1);
+      box-shadow: 0 0 10px #0099ff;
       transition: all 0.3s;
     }
-
-    .cta:hover {
-      background-color: #0056b3;
-      color: white;
+    nav a:hover {
+      background: #0099ff;
+      color: #fff;
+      box-shadow: 0 0 20px var(--main-color), 0 0 30px var(--main-color);
     }
-
-    .section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: auto;
-      animation: fadeInUp 1.5s ease;
+    .color-picker {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 20px;
     }
-
-    .section h2 {
-      text-align: center;
-      font-size: 32px;
-      color: #007BFF;
-      margin-bottom: 20px;
+    .color-btn {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      border: 2px solid #fff;
+      cursor: pointer;
+      box-shadow: 0 0 8px rgba(255,255,255,0.5);
     }
-
-    .section ul {
-      padding-left: 20px;
-    }
-
     footer {
-      background-color: #0D6EFD;
-      color: white;
       text-align: center;
-      padding: 20px;
-      margin-top: 40px;
+      padding: 30px 20px;
+      background: #000c1a;
+      color: #999;
     }
-
-    /* Support Box */
-    .support-box {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #ffffff;
-      border-left: 5px solid #007BFF;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.15);
-      text-align: center;
-      z-index: 1000;
-      animation: slideIn 1.5s ease;
-    }
-
-    .support-box h1 {
-      font-size: 18px;
-      color: #007BFF;
-      margin-bottom: 10px;
-    }
-
-    .support-box p {
-      font-size: 14px;
-      color: #555;
-      margin-bottom: 15px;
-    }
-
-    .btn {
-      background-color: #007BFF;
-      color: white;
-      padding: 8px 16px;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: 500;
-      margin: 5px;
-      display: inline-block;
-      transition: 0.3s;
-    }
-
-    .btn:hover {
-      background-color: #0056b3;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateX(100px); }
-      to { opacity: 1; transform: translateX(0); }
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2.5rem;
+      }
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
+  <script>
+    function setThemeColor(color) {
+      document.documentElement.style.setProperty('--main-color', color);
+    }
+  </script>
 </head>
 <body>
-
   <header>
-    <div class="logo">Vexinq</div>
+    <h1>Vexarithul</h1>
     <nav>
-  <ul>
-    <li><a href="#about"><span class="nav-dot"></span> Hakkımızda</a></li>
-    <li><a href="#features"><span class="nav-dot"></span> Özellikler</a></li>
-    <li><a href="#contact"><span class="nav-dot"></span> İletişim</a></li>
-    <li><a class="invite-btn" href="https://discord.com/oauth2/authorize?client_id=1387098050316472341&permissions=8&scope=bot" target="_blank">Davet Et</a></li>
-  </ul>
-</nav>
-
+      <a href="about.html">Hakkımda</a>
+      <a href="projects.html">Projelerim</a>
+      <a href="features.html">Özellikler</a>
+    </nav>
+    <div class="color-picker">
+      <div class="color-btn" style="background:#00aaff" onclick="setThemeColor('#00aaff')"></div>
+      <div class="color-btn" style="background:#ff0044" onclick="setThemeColor('#ff0044')"></div>
+      <div class="color-btn" style="background:#00ff88" onclick="setThemeColor('#00ff88')"></div>
+      <div class="color-btn" style="background:#ffaa00" onclick="setThemeColor('#ffaa00')"></div>
+      <div class="color-btn" style="background:#aa00ff" onclick="setThemeColor('#aa00ff')"></div>
+      <div class="color-btn" style="background:#ffffff" onclick="setThemeColor('#ffffff')"></div>
+    </div>
   </header>
 
-  <section class="hero">
-    <h1>Vexinq ile Sunucunuzu Güçlendirin</h1>
-    <p>Her gün yenilenen komutlar ve gelişmiş sistemlerle sunucunuzu bir adım öteye taşıyın.</p>
-    <a class="cta" href="https://discord.com/oauth2/authorize?client_id=1387098050316472341&permissions=8&scope=bot" target="_blank">Botu Davet Et</a>
-  </section>
-
-  <section id="about" class="section">
-    <h2>Hakkımızda</h2>
-    <p>Vexinq, 2023 yılında Discord topluluklarının ihtiyaçlarını karşılamak amacıyla geliştirilen gelişmiş bir bot sistemidir. Kullanıcı odaklı tasarımı, modüler altyapısı ve sürekli güncellenen yapısı ile sunucular için en iyi yardımcıyı sunar.</p>
-  </section>
-
-  <section id="features" class="section">
-    <h2>Özellikler</h2>
-    <ul>
-      <li>🏗️ Otomatik Sunucu Kurulumu</li>
-      <li>🔨 Gelişmiş Moderasyon Sistemi</li>
-      <li>🛡️ Güçlü Koruma ve Anti-Raid</li>
-      <li>🧰 Kayıt, Stat ve Davet Takip Sistemleri</li>
-      <li>🎉 Eğlence ve Bilgi Komutları</li>
-    </ul>
-  </section>
-
-  <section id="contact" class="section">
-    <h2>İletişim</h2>
-    <p>Bize ulaşmak için <a href="#">YAKINDA...</a> adresinden mail atabilirsiniz.</p>
-  </section>
-
   <footer>
-    <p>&copy; 2025 Vexinq Bot. Tüm hakları saklıdır.</p>
+    <p>&copy; 2025 Vexarithul. Tüm hakları saklıdır.</p>
   </footer>
-
-  <div class="support-box">
-    <h1>📢 Destek Sunucumuz</h1>
-    <p>7/24 destek için bize ulaşabilirsiniz.</p>
-    <a class="btn" href="https://discord.gg/qvZBKEUCQy" target="_blank">Vexinq</a>
-    <a class="btn" href="https://discord.gg/MKq4UsRNMS" target="_blank">ZenixCore</a>
-  </div>
-
 </body>
 </html>
