--- a/index.html
+++ b/index.html
@@ -2,161 +2,294 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vexarithul</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vexinq Discord Botu</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     :root {
-      --highlight-color: #ff0044;
+      --primary-color: #007BFF;
+      --primary-dark: #0056b3;
+      --background: #f4faff;
+      --text: #333;
     }
-    * {
+
+    body {
+      font-family: 'Poppins', sans-serif;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
+      background-color: var(--background);
+      color: var(--text);
+      scroll-behavior: smooth;
     }
-    body {
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(135deg, #00111a, #000c1a);
-      color: #fff;
-      overflow-x: hidden;
-    }
+
     header {
-      text-align: center;
-      padding: 60px 20px 30px;
-    }
-    header h1 {
-      font-size: 4rem;
-      color: var(--highlight-color);
-      text-shadow: 0 0 20px var(--highlight-color), 0 0 40px var(--highlight-color);
-    }
-    nav {
+      background-color: var(--primary-color);
+      padding: 20px 40px;
       display: flex;
-      justify-content: center;
-      gap: 2rem;
-      flex-wrap: wrap;
-      margin-top: 20px;
+      justify-content: space-between;
+      align-items: center;
+      color: white;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
+
+    .logo {
+      font-size: 24px;
+      font-weight: 600;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+
     nav a {
       text-decoration: none;
-      color: var(--highlight-color);
+      color: white;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #b3d1ff;
+    }
+
+    .invite-btn {
+      background-color: white;
+      color: var(--primary-color) !important;
+      padding: 8px 16px;
+      border-radius: 6px;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+
+    .invite-btn:hover {
+      background-color: var(--primary-dark);
+      color: white !important;
+    }
+
+    .hero {
+      background: linear-gradient(to right, var(--primary-color), var(--primary-dark));
+      color: white;
+      text-align: center;
+      padding: 80px 20px;
+      animation: fadeIn 2s ease;
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+
+    .cta {
+      display: inline-block;
+      padding: 12px 24px;
+      background-color: white;
+      color: var(--primary-color);
+      border-radius: 6px;
       font-weight: bold;
-      padding: 10px 15px;
-      border-radius: 8px;
-      background: rgba(255, 0, 68, 0.1);
-      box-shadow: 0 0 10px var(--highlight-color);
+      text-decoration: none;
       transition: all 0.3s;
     }
-    nav a:hover {
-      background: var(--highlight-color);
-      color: #fff;
-      box-shadow: 0 0 20px var(--highlight-color), 0 0 30px var(--highlight-color);
+
+    .cta:hover {
+      background-color: var(--primary-dark);
+      color: white;
     }
-    .color-picker {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin-top: 20px;
-    }
-    .color-btn {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      border: 2px solid #fff;
-      cursor: pointer;
-      box-shadow: 0 0 8px rgba(255,255,255,0.5);
-    }
-    section {
-      padding: 80px 20px;
-      max-width: 1100px;
+
+    .section {
+      padding: 60px 20px;
+      max-width: 1000px;
       margin: auto;
+      animation: fadeInUp 1.5s ease;
     }
-    h2 {
-      font-size: 2rem;
-      color: var(--highlight-color);
-      margin-bottom: 30px;
-      text-shadow: 0 0 15px var(--highlight-color);
-    }
-    .card {
-      background: rgba(255, 255, 255, 0.05);
-      backdrop-filter: blur(12px);
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(255, 0, 68, 0.5);
-      padding: 30px;
-      margin-bottom: 30px;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 30px var(--highlight-color);
-    }
-    ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    ul li::before {
-      content: "★ ";
-      color: var(--highlight-color);
-    }
-    footer {
+
+    .section h2 {
       text-align: center;
-      padding: 30px 20px;
-      background: #000c1a;
-      color: #999;
+      font-size: 32px;
+      color: var(--primary-color);
+      margin-bottom: 20px;
     }
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2.5rem;
-      }
-      nav {
-        flex-direction: column;
-        align-items: center;
-      }
+
+    .section ul {
+      padding-left: 20px;
+    }
+
+    footer {
+      background-color: var(--primary-color);
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 40px;
+    }
+
+    .support-box {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #ffffff;
+      border-left: 5px solid var(--primary-color);
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.15);
+      text-align: center;
+      z-index: 1000;
+      animation: slideIn 1.5s ease;
+    }
+
+    .support-box h1 {
+      font-size: 18px;
+      color: var(--primary-color);
+      margin-bottom: 10px;
+    }
+
+    .support-box p {
+      font-size: 14px;
+      color: #555;
+      margin-bottom: 15px;
+    }
+
+    .btn {
+      background-color: var(--primary-color);
+      color: white;
+      padding: 8px 16px;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: 500;
+      margin: 5px;
+      display: inline-block;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background-color: var(--primary-dark);
+    }
+
+    .theme-switcher {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: white;
+      border-radius: 10px;
+      padding: 10px 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      z-index: 1001;
+    }
+
+    .theme-switcher select {
+      font-family: 'Poppins', sans-serif;
+      padding: 6px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes slideIn {
+      from { opacity: 0; transform: translateX(100px); }
+      to { opacity: 1; transform: translateX(0); }
     }
   </style>
-  <script>
-    function setHighlightColor(color) {
-      document.documentElement.style.setProperty('--highlight-color', color);
-    }
-  </script>
 </head>
 <body>
+
+  <!-- Tema Seçici -->
+  <div class="theme-switcher">
+    <label for="theme">🎨 Tema:</label>
+    <select id="theme" onchange="changeTheme(this.value)">
+      <option value="blue">Mavi</option>
+      <option value="red">Kırmızı</option>
+      <option value="green">Yeşil</option>
+      <option value="purple">Mor</option>
+      <option value="orange">Turuncu</option>
+      <option value="black">Siyah</option>
+    </select>
+  </div>
+
   <header>
-    <h1>Vexarithul</h1>
+    <div class="logo">Vexinq</div>
     <nav>
-      <a href="about.html">Hakkımda</a>
-      <a href="projects.html">Projelerim</a>
-      <a href="features.html">Özellikler</a>
+      <ul>
+        <li><a href="#about">Hakkımızda</a></li>
+        <li><a href="#features">Özellikler</a></li>
+        <li><a href="#contact">İletişim</a></li>
+        <li><a class="invite-btn" href="https://discord.com/oauth2/authorize?client_id=1387098050316472341&permissions=8&scope=bot" target="_blank">Davet Et</a></li>
+      </ul>
     </nav>
-    <div class="color-picker">
-      <div class="color-btn" style="background:#ff0044" onclick="setHighlightColor('#ff0044')"></div>
-      <div class="color-btn" style="background:#ffaa00" onclick="setHighlightColor('#ffaa00')"></div>
-      <div class="color-btn" style="background:#00aaff" onclick="setHighlightColor('#00aaff')"></div>
-      <div class="color-btn" style="background:#00ff88" onclick="setHighlightColor('#00ff88')"></div>
-      <div class="color-btn" style="background:#aa00ff" onclick="setHighlightColor('#aa00ff')"></div>
-      <div class="color-btn" style="background:#ffffff" onclick="setHighlightColor('#ffffff')"></div>
-    </div>
   </header>
 
-  <section id="about">
-    <h2>Hakkımda</h2>
-    <div class="card">
-      <p>Ben Vexarithul. Modern, sade ve etkili dijital deneyimler üretmeyi seviyorum. Kodlarım net, arayüzlerim akıcıdır.</p>
-    </div>
+  <section class="hero">
+    <h1>Vexinq ile Sunucunuzu Güçlendirin</h1>
+    <p>Her gün yenilenen komutlar ve gelişmiş sistemlerle sunucunuzu bir adım öteye taşıyın.</p>
+    <a class="cta" href="https://discord.com/oauth2/authorize?client_id=1387098050316472341&permissions=8&scope=bot" target="_blank">Botu Davet Et</a>
   </section>
 
-  <section id="projects">
-    <h2>Projelerim</h2>
-    <div class="card">
-      <ul>
-        <li>PureFlow - Temiz ve hızlı UI/UX sistemi</li>
-        <li>BlueShell - Minimalist portföy şablonu</li>
-        <li>LightEngine - Modern JS animasyon altyapısı</li>
-      </ul>
-    </div>
+  <section id="about" class="section">
+    <h2>Hakkımızda</h2>
+    <p>Vexinq, 2023 yılında Discord topluluklarının ihtiyaçlarını karşılamak amacıyla geliştirilen gelişmiş bir bot sistemidir. Kullanıcı odaklı tasarımı, modüler altyapısı ve sürekli güncellenen yapısı ile sunucular için en iyi yardımcıyı sunar.</p>
+  </section>
+
+  <section id="features" class="section">
+    <h2>Özellikler</h2>
+    <ul>
+      <li>🏗️ Otomatik Sunucu Kurulumu</li>
+      <li>🔨 Gelişmiş Moderasyon Sistemi</li>
+      <li>🛡️ Güçlü Koruma ve Anti-Raid</li>
+      <li>🧰 Kayıt, Stat ve Davet Takip Sistemleri</li>
+      <li>🎉 Eğlence ve Bilgi Komutları</li>
+    </ul>
+  </section>
+
+  <section id="contact" class="section">
+    <h2>İletişim</h2>
+    <p>Bize ulaşmak için <a href="#">YAKINDA...</a> adresinden mail atabilirsiniz.</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Vexarithul. Tüm hakları saklıdır.</p>
+    <p>&copy; 2025 Vexinq Bot. Tüm hakları saklıdır.</p>
   </footer>
+
+  <div class="support-box">
+    <h1>📢 Destek Sunucumuz</h1>
+    <p>7/24 destek için bize ulaşabilirsiniz.</p>
+    <a class="btn" href="https://discord.gg/qvZBKEUCQy" target="_blank">Vexinq</a>
+    <a class="btn" href="https://discord.gg/MKq4UsRNMS" target="_blank">ZenixCore</a>
+  </div>
+
+  <script>
+    function changeTheme(theme) {
+      const root = document.documentElement;
+      const themes = {
+        blue:   { primary: '#007BFF', dark: '#0056b3', bg: '#f4faff', text: '#333' },
+        red:    { primary: '#DC3545', dark: '#a71d2a', bg: '#fff5f5', text: '#333' },
+        green:  { primary: '#28a745', dark: '#1e7e34', bg: '#f3fff4', text: '#222' },
+        purple: { primary: '#6f42c1', dark: '#4b2a99', bg: '#f9f4ff', text: '#222' },
+        orange: { primary: '#fd7e14', dark: '#cc6510', bg: '#fffaf4', text: '#222' },
+        black:  { primary: '#212529', dark: '#000000', bg: '#121212', text: '#f8f9fa' }
+      };
+
+      const selected = themes[theme];
+      root.style.setProperty('--primary-color', selected.primary);
+      root.style.setProperty('--primary-dark', selected.dark);
+      root.style.setProperty('--background', selected.bg);
+      root.style.setProperty('--text', selected.text);
+    }
+  </script>
+
 </body>
 </html>
